tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@undefined_slice.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/undefined_slice.txt
---
error: Cannot slice an undefined value
 --> undefined_slice.txt:1:4
  |
1 | {{ missing[:1] }}
  |    ^^^^^^^
